--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="main">
             <h1>Bài tập buổi 1</h1>
             <ul class="buoi1">
-                <li><a href="bai 1.html">Bài 1</a></li>
+                <li><a href="bai`tap 1.html">Bài 1</a></li>
                 <li>
                     <a href="html b2.1.html"> Bài 2.1</a>
                 </li>
@@ -23,7 +23,8 @@
             </ul>
             <h1>Bài tập buổi 2</h1>
             <ul class="buoi1">
-                <li><a href="2.bai1.html">Bài 1</a></li>
+                <li><a href="bai 1.html">Bài 1</a></li>
+                
                 <li>
                     <a href="2.Bai2.1.html"> Bài 2.1</a>
                 </li>
