--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
                 <li><a href="bai`4.html">Bài 4</a></li>
             </ul>
             <h1>Bài tập buổi 2</h1>
-            <ul class="buoi1">
-                <li><a href="bai 1.html">Bài 1</a></li>
+            <ul class="buoi2">
+                <li><a href="baitap 1 buoi2.html">Bài 1</a></li>
                 
                 <li>
-                    <a href="2.Bai2.1.html"> Bài 2.1</a>
+                    <a href="baitap 2.1 buoi2.html"> Bài 2.1</a>
                 </li>
                 <li>
-                    <a href="2.Bai2.2.html"> Bài 2.2</a>
+                    <a href="baitap 2.2 buoi 2.html"> Bài 2.2</a>
                 </li>
-                <li><a href="2.bai3.html">Bài 3</a></li>
-                <li><a href="2.bai4.html">Bài 4</a></li>
+                <li><a href="baitap 3.1 buoi2.html">Bài 3</a></li>
+                <li><a href="baitap 3.2 buoi2.html">Bài 4</a></li>
                 <li><a href="bai4.html">Bài 4</a></li>
             </ul>
             <h1>Bài tập buổi 3</h1>
