--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul class="buoi1">
                 <li><a href="bai`tap 1.html">Bài 1</a></li>
                 <li>
-                    <a href="html b2.1.html"> Bài 2.1</a>
+                    <a href="2,1.html"> Bài 2.1</a>
                 </li>
                 <li><a href="2,2.html">Bài 2.2</a></li>
                 <li>
