--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                 <li><a href="bai4.html">Bài 4</a></li>
             </ul>
             <h1>Bài tập buổi 3</h1>
+               <li>
+                <li><a href="baitapbuoi3.html">Bài 3</a></li>
+               </li>
+                
+
         </div>
     </body>
 </html>
