--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                <li>
                 <li><a href="baitapbuoi3.html">Bài 3</a></li>
                </li>
+               <h1>bai 30 phan tram</h1>
+               <li>
+                <li><a href="bai 30.html">baikiemtra</a></li>
+               </li>
                 
 
         </div>
