--- a/bai 30.html
+++ b/bai 30.html
@@ -404,16 +404,16 @@
             </div>
             <ul class="icon-footer">
                 <li class="footer_link">
-                    <a href="https://www.facebook.com/manh.nguyenthe.79274/"><img src="facebook.png" width="20px"></a>
+                    <a href="https://www.facebook.com/mingkhengg/"><img src="facebook.png" width="20px"></a>
                 </li>
                 <li class="footer_link">
-                    <a href="https://www.instagram.com/ntm.funboy/"><img src="ig.png" width="20px"></a>
+                    <a href="https://www.instagram.com/mkhanhhh._/"><img src="ig.png" width="20px"></a>
                 </li>
                 <li class="footer_link">
-                    <a href="https://www.facebook.com/manh.nguyenthe.79274/"><img src="chim.png" width="20px"></a>
+                    <a href="https://www.facebook.com/mingkhengg/"><img src="chim.png" width="20px"></a>
                 </li>
                 <li class="footer_link">
-                    <a href="https://www.facebook.com/manh.nguyenthe.79274/"><img src="goi.png" width="20px"></a>
+                    <a href="https://www.facebook.com/mingkhengg//"><img src="goi.png" width="20px"></a>
                 </li>
             </ul>
         </div>
