--- a/index.html
+++ b/index.html
@@ -41,8 +41,17 @@
                </li>
                <h1>bai 30 phan tram</h1>
                <li>
-                <li><a href="bai 30.html">baikiemtra</a></li>
-               </li>
+                <li><a href="bai 30.html">baikiemtra</a></li> 
+            </li>
+        </div>
+        <ul class="menulist">
+            <h3>Buổi 4</h3>
+            <li class="menuitem"><a href="#">bài 1 </a></li> 
+            <li class="menuitem"><a href="#">bài 2,1 </a></li>
+            <li class="menuitem"><a href="#">bài 2,2 </a></li>
+            <li class="menuitem"><a href="#">bài 3 </a></li>
+            <li class="menuitem"><a href="#">bài 4 </a></li>
+           </ul>
                 
 
         </div>
