--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </div>
         <ul class="menulist">
             <h3>Buổi 4</h3>
-            <li class="menuitem"><a href="#">bài 1 </a></li> 
-            <li class="menuitem"><a href="#">bài 2,1 </a></li>
+            <li class="menuitem"><a href="4bai1.html">bài 1 </a></li> 
+            <li class="menuitem"><a href="">bài 2,1 </a></li>
             <li class="menuitem"><a href="#">bài 2,2 </a></li>
             <li class="menuitem"><a href="#">bài 3 </a></li>
             <li class="menuitem"><a href="#">bài 4 </a></li>
