--- a/bai3.html
+++ b/bai3.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>web</title>
+    <title>Document</title>
 </head>
 <body>
-    <script src="bt.js"></script>
+    <script src="b3.js"></script>
 </body>
 </html>
