update bai buoi 7

--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
                 <li class="menuitem"><a href="b5.html">bài 5 </a></li>
                 <li class="menuitem"><a href="b6-1.html">bài 6,1 </a></li>
                 <li class="menuitem"><a href="b6-2.html">bài 6,2 </a></li>
+
+                <h1>Buổi 7</h1>
+                <li class="menuitem"><a href="">bài 7 </a></li> 
+                <li class="menuitem"><a href="">bài 8,1 </a></li>
+                <li class="menuitem"><a href="">bài 8,2 </a></li>
+                <li class="menuitem"><a href="">bài 8,3 </a></li>
+                <li class="menuitem"><a href="">bài 9 </a></li>
      
            </ul>
                 
